tests/NormalTests/paczka1/small_fuzzy/56671662.err
Error in line 5: S524 A93 16,4
Error in line 6: S524 S563 49,5
Error in line 7: pRy S563 88,5
Error in line 11: pRy S524 86,4
